--- a/wa/wa2.html
+++ b/wa/wa2.html
@@ -9,7 +9,7 @@
   <h1 style="color: rgb(188, 143, 143);">Hi! I'm Isa :) </h1>
   <h2 style="color: rgb(176, 196, 222);">she/her</h2>
   
-  <img src="../img/me.jpg" alt="A photo of Isa (me) in my favorite place (NYC)" width="300">
+  <img src="../img/me.JPG" alt="A photo of Isa (me) in my favorite place (NYC)" width="300">
   
   <h3 style="color:rgb(188, 143, 143);">My goals for this course:</h3>
       <p style="margin-left: 25px; color: rgb(176, 196, 222)">✰to learn how to make clean, creative, and functional websites</p>
@@ -20,7 +20,7 @@
       <p style="margin-left: 25px; color: rgb(176, 196, 222)">✰I love being creative and playing with visual aesthetics</p>
       <p style="margin-left: 25px; color: rgb(176, 196, 222)">✰next stop: NYC.</p>
   <h5 style="color:rgb(188, 143, 143);">Some of my current favs...</h5>
-      <p style="margin-left: 25px; color: rgb(176, 196, 222)">✰Here's one of my favorite <a href="/img/gradphotos.jpg">grad photos</a></p>
+      <p style="margin-left: 25px; color: rgb(176, 196, 222)">✰Here's one of my favorite <a href="../img/gradphotos.JPG">grad photos</a></p>
       <p style="margin-left: 25px; color: rgb(176, 196, 222)">✰& one of my favortie artists singing one of my favorite <a href="https://www.youtube.com/watch?v=9Gbl-IDp1qc&list=RD9Gbl-IDp1qc&start_radio=1">songs</a> </p>
   <h6 style="color:rgb(188, 143, 143);">Enjoy! xx</h6>
 </body>
