Update wa2.html italicizing

--- a/wa/wa2.html
+++ b/wa/wa2.html
@@ -6,8 +6,9 @@
   <title>Isa Grznar</title>
 </head>
 <body style="background-color: rgb(250, 240, 240);">
-  <h1 style="color: rgb(187, 68, 68);">Hi! I'm Isa :) </h1>
-  <h2 style="color: rgb(187, 68, 68);">she/her</h2>
+  <h1 style="color: rgb(187, 68, 68);">In the Eyes of Isa</h1>
+  <h2 style="color: rgb(187, 68, 68);">by Isa Grznar</h2>
+  <h3 style="color: rgb(89, 115, 148);"<em>she/her<em></h3>
   
   <img src="../img/me.JPG" alt="A photo of Isa (me) in my favorite place (NYC)" width="300">
   
