Update wa2.html fun stuff

--- a/wa/wa2.html
+++ b/wa/wa2.html
@@ -3,13 +3,13 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>In the Eyes of Isa by Isa Grznar</title>
+  <title>In the Eyes of ISA by Isa Grznar</title>
 </head>
-<body style="margin: 0; padding: 20px; background-color: rgb(249, 242, 220);">
-  <h1 style="color: rgb(187, 68, 68);">In the Eyes of Isa</h1>
+<body style="margin: 0; background-color: rgb(249, 242, 220);">
+  <h1 style="color: rgb(187, 68, 68);">In the Eyes of ISA ˚⋆𐙚｡⋆𖦹.✧˚</h1>
   <h2 style="color: rgb(187, 68, 68);">by Isa Grznar</h2>
+  <h4 style="color:rgb(187, 68, 68);"> <em>she/her</em> </h4>
   <h3 style="color: rgb(89, 115, 148);">product design ✰ graphic design ✰ illustration ✰ branding ✰ aesthetics </h3>
-  <h4 style="color:rgb(89, 115, 148);"> <em>she/her</em> </h4>
   
   <img src="../img/me.JPG" alt="A photo of Isa (me) in my favorite place (NYC)" width="300">
   
