Update wa2.html margins

--- a/wa/wa2.html
+++ b/wa/wa2.html
@@ -6,8 +6,8 @@
   <title>In the Eyes of Isa by Isa Grznar</title>
 </head>
 <body style="background-color: rgb(249, 242, 220);">
-  <h1 style="color: rgb(187, 68, 68);">In the Eyes of Isa</h1>
-  <h2 style="color: rgb(187, 68, 68);">by Isa Grznar ˚⋆𐙚｡⋆𖦹.✧˚</h2>
+<h1 style="color: rgb(187, 68, 68); margin-bottom: 5px;">In the Eyes of Isa</h1>
+<h2 style="color: rgb(187, 68, 68); margin-top: 0;">by Isa Grznar ˚⋆𐙚｡⋆𖦹.✧˚</h2>
   <h3 style="color: rgb(89, 115, 148);">product design ✰ graphic design ✰ illustration ✰ branding ✰ aesthetics </h3>
   <h4 style="color:rgb(187, 68, 68);"> <em>she/her</em> </h4>
   
