--- a/ica/ica3a.html
+++ b/ica/ica3a.html
@@ -48,7 +48,7 @@ USA<br>
 
 
 <address>
-<strong>Miss Eileen Dove</strong><br>
+<strong>Miss Eileen Dover</strong><br>
 4321 Cliff Top Edge<br>
 Dover, CT9 XXX<br>
 UK<br>
