--- a/wa3.html
+++ b/wa3.html
@@ -7,13 +7,13 @@
 <body>
     <h1>Aesthetics in Women's Fashion – Summer 2025</h1>
 
-    <p><em>Curated by a fashion-lover in her 20s who thrives on thrifting, vintage inspiration, and designer flair.</em></p>
+    <p><em>Written and curated by Isa Grznar, a fashion girly in her 20s with a passion for thrifting, sustainable fashion, and vintage aesthetics.</em></p>
 
     <h2>Table of Contents</h2>
     <ul>
         <li><a href="#nyc-style">NYC Street Style & Seasonal Trends</a></li>
         <li><a href="#basics">The Power of Basics</a></li>
-        <li><a href="#thrifted">The Art of Styling Thrifted Pieces</a></li>
+        <li><a href="#thrifted">The Art of Styling and Re-Styling Thrifted Pieces</a></li>
         <li><a href="#trend-highlights">Belts, Boots, and Micro Shorts: Trend Highlights</a></li>
         <li><a href="#one-piece">One Piece, Many Looks</a></li>
         <li><a href="#capsule">Capsule Wardrobes & Taking Risks</a></li>
@@ -22,37 +22,38 @@
     </ul>
 
     <h2 id="nyc-style">NYC Street Style & Seasonal Trends</h2>
-    <p>New York City style changes with the weather, but one thing remains: individuality reigns. In the summer, it’s all about layering light textures, creative accessorizing, and blending vintage with trendy. </p>
+    <p>While style in NYC changes with the weather, one thing always remains constant and that is individuality shown through taking risks in outfits daily. In the summer, it’s all about layering light textures, accessorizing creatively, and blending timeless vintage with the current trends. </p>
     <img src="as seen on the streets of nyc .png" alt="Street style in NYC" width="500">
-    <p><em>Image via Pinterest – NYC inspiration</em></p>
+    <p><em>Images via Pinterest – NYC inspiration</em></p>
 
     <h2 id="basics">The Power of Basics</h2>
-    <p>Every great outfit starts with strong basics. Think white tanks, black mini skirts, and denim — they're the framework for endless creative combos. Skims and Levi’s are favorites for their quality and versatility.</p>
+    <p>Every great outfit starts with strong basics. Simple clothing pieces like white tanks, black tees, and everyday denim can easily act as the framework for endless creative combos to be built off of. Two highly-favorited brands currently are Skims and Levi’s, known for their quality, comfort, and versatility.</p>
     <img src="the importance of a good basic.png" alt="High quality fashion basics" width="500">
+    <p><em>Here are the links to a couple sites I mentioned...</em></p>
     <p><a href="https://www.skims.com" target="_blank">Skims</a> | <a href="https://www.levi.com" target="_blank">Levi's</a></p>
 
-    <h2 id="thrifted">The Art of Styling Thrifted Pieces</h2>
-    <p>Thrifting is a sustainable, fun, and expressive way to curate a wardrobe. It also combats the negatives of fast fashion by keeping clothes in circulation and supporting small sellers.</p>
+    <h2 id="thrifted">The Art of Styling and Re-Styling Thrifted Pieces</h2>
+    <p>Thrifting is a sustainable, fun, and expressive way to curate a wardrobe. It also combats the negatives of fast fashion by keeping clothes in circulation and supporting small sellers. When shopping, keeping in mind how many ways an item can be styled should be a key factor in your decision to purchase or not.</p>
     <img src="one skirt worn many ways: one skirt and bag combo worn many ways.png" alt="Thrifted styling options" width="500">
-    <p><em>One skirt styled multiple ways with a standout bag</em></p>
+    <p><em>One skirt styled multiple ways, paired with the same bag aswell</em></p>
 
     <h2 id="trend-highlights">Belts, Boots, and Micro Shorts: Trend Highlights</h2>
-    <p>Statement belts over micro shorts or skirt waists without loops? An obsession. And boots? They make everything cooler, especially in contrast with bare legs.</p>
+    <p>Statement belts over micro shorts or skirt waists without loops? An Summer 2025 OBSESSION. And boots? They make everything cooler, especially when paired with boots, or a lower ballet flat/sneaker with high socks.</p>
     <img src="trend #1- adding belts to skirts, micro shorts, etc. .png" alt="Belts and micro shorts" width="500">
     <img src="trend #2- micro shorts .png" alt="Micro shorts trend" width="500">
-    <p><em>Micro shorts + belts = moment</em></p>
+    <p><em>Micro shorts + belts = the perfect Summer 2025 moment</em></p>
 
     <h2 id="one-piece">One Piece, Many Looks</h2>
-    <p>Capsule and sustainability meet when one item — like a Miu Miu crochet bag — can anchor countless outfits. These pieces become your signature.</p>
+    <p>Sustainability and the idea of a capsule wardrobe come into play here, when one item-- like a Miu Miu crochet bag-- can accompany countless outfits. This is a way to incorporate designer pieces alongside your thrifted clothing, while going back to the idea of choosing pieces you can style many different ways. </p>
     <img src="one bag worn many ways .png" alt="Miu Miu crochet bag styled multiple ways" width="500">
-    <p><em>The iconic Miu Miu bag styled across outfits</em></p>
+    <p><em>The iconic, colorful, crochet Miu Miu bag styled across many different outfits and aesthetics</em></p>
 
     <h2 id="capsule">Capsule Wardrobes & Taking Risks</h2>
-    <p>Capsule wardrobes aren't boring — they're freeing. Think fewer pieces, more styling power. It’s all about finding your look and playing with it boldly.</p>
-    <p>Check out <a href="https://open.spotify.com/episode/1h4f9vF1JgTxIymkJYy1eb" target="_blank">Emma Chamberlain's podcast episode on capsule wardrobes</a>.</p>
+    <p>Capsule wardrobes aren't boring-- they're freeing. Think fewer pieces, more styling power, and more of a chance you'll be able to even remember what's in your closet. It’s all about pairing your favorite colors with your style aesthetic to find your signature look, using pieces that can be used cohesively with one another to create many different looks.</p>
+    <p>Check out <a href="https://open.spotify.com/episode/1h4f9vF1JgTxIymkJYy1eb" target="_blank">Emma Chamberlain's podcast episode on capsule wardrobes is one of my favorites, go give it a listen!</a>.</p>
 
     <h2 id="shopping-smart">Shopping Smart: Depop, Poshmark, and The RealReal</h2>
-    <p>These platforms make fashion accessible, circular, and community-driven. Depop and Poshmark are best for thrifting + selling, while The RealReal is luxury resale heaven.</p>
+    <p>Each of these platforms make fashion accessible, reusable, and offer a whole new way of thrifting-- especially when it comes to designer pieces. Depop and Poshmark are best for thrifting and selling, while The RealReal is an online heaven for vintage designer pieces.</p>
     <ul>
         <li><a href="https://www.depop.com" target="_blank">Depop</a></li>
         <li><a href="https://www.poshmark.com" target="_blank">Poshmark</a></li>
