--- a/wa3.html
+++ b/wa3.html
@@ -62,11 +62,13 @@
 
     <h2 id="see-also">See also...</h2>
     <ul>
-        <li><a href="https://exampleclassmate1.github.io/wa3.html" target="_blank">Vintage Fashion Icons - by Classmate 1</a></li>
-        <li><a href="https://exampleclassmate2.github.io/wa3.html" target="_blank">Sustainable Fashion - by Classmate 2</a></li>
+        <li><a href="https://deconco.github.io/wa/wa3.html" target="_blank">"Crochet" written by Connor Cook</a></li>
+        <li><a href="https://damc5336.github.io/wa/wa3.html" target="_blank">"Shoes" written by David McConnell</a></li>
+        <li><a href="https://jack-yamaato.github.io/wa/wa3.html" target="_blank">"Adidas Sambas" written by Jack Yamaato</a></li>
+        <li><a href="https://anng9792.github.io/wa/wa3.html" target="_blank">"High Fashion vs. Commmercial Photography" written by Angelli Nguyen</a></li>
     </ul>
 
-    <p><em>Images via Pinterest | Content inspired by personal experience and curated sources.</em></p>
+    <p><em>Images via Pinterest | Content inspired by personal knowledge and curated sources.</em></p>
     <p><em>Source: <a href="https://www.vogue.com" target="_blank">Vogue</a>, Emma Chamberlain Podcast, The RealReal, Skims, Depop</a></em></p>
 </body>
 </html>
