--- a/wa3.html
+++ b/wa3.html
@@ -38,7 +38,7 @@
     <p><em>One skirt styled multiple ways, paired with the same bag aswell</em></p>
 
     <h2 id="trend-highlights">Belts, Boots, and Micro Shorts: Trend Highlights</h2>
-    <p>Statement belts over micro shorts or skirt waists without loops? An Summer 2025 OBSESSION. And boots? They make everything cooler, especially when paired with boots, or a lower ballet flat/sneaker with high socks.</p>
+    <p>Statement belts over micro shorts or skirt waists without loops? A Summer 2025 obsession. And boots? They make everything cooler, especially when paired with boots, or a lower ballet flat/sneaker with high socks.</p>
     <img src="trend #1- adding belts to skirts, micro shorts, etc. .png" alt="Belts and micro shorts" width="500">
     <img src="trend #2- micro shorts .png" alt="Micro shorts trend" width="500">
     <p><em>Micro shorts + belts = the perfect Summer 2025 moment</em></p>
