--- a/wa3.html
+++ b/wa3.html
@@ -39,8 +39,8 @@
 
     <h2 id="trend-highlights">Belts, Boots, and Micro Shorts: Trend Highlights</h2>
     <p>Statement belts over micro shorts or skirt waists without loops? A Summer 2025 obsession. And boots? They make everything cooler, especially when paired with boots, or a lower ballet flat/sneaker with high socks.</p>
-    <img src="trend #1- adding belts to skirts, micro shorts, etc. .png" alt="..." width="500">
-    <img src="trend #2- micro shorts .png" alt="..." width="500">
+    <img src="trend1-belts-microshorts.png" alt="Belts on micro shorts and skirts" width="500">
+    <img src="trend2-microshorts.png" alt="Micro shorts" width="500">
     <p><em>Micro shorts + belts = the perfect Summer 2025 moment</em></p>
 
     <h2 id="one-piece">One Piece, Many Looks</h2>
