Update wa3.html photo links

--- a/wa3.html
+++ b/wa3.html
@@ -23,19 +23,19 @@
 
     <h2 id="nyc-style">NYC & European Cities Street Style</h2>
     <p>While style in NYC changes with the weather, one thing always remains constant and that is individuality shown through taking risks in outfits daily. In the summer, it’s all about layering light textures, accessorizing creatively, and blending timeless vintage with the current trends. I also like the color coordination and put-together aesthetic used in London and other areas of Europe, as you can see aswell. </p>
-    <img src="as-seen-on-the-streets.png" alt="Street style in NYC" width="500">
-    <img src="color-coordination.png" alt="Street style in Europe" width="500">
+    <img src="wa/as-seen-on-the-streets.png" alt="Street style in NYC" width="500">
+    <img src="wa/color-coordination.png" alt="Street style in Europe" width="500">
     <p><em>Images via Pinterest – NYC and European style inspiration</em></p>
 
     <h2 id="basics">The Power of Basics</h2>
     <p>Every great outfit starts with strong basics. Simple clothing pieces like white tanks, black tees, and everyday denim can easily act as the framework for endless creative combos to be built off of. Two highly-favorited brands currently are Skims and Levi’s, known for their quality, comfort, and versatility.</p>
-    <img src="importance-of-a-good-basic.png" alt="High quality fashion basics" width="500">
+    <img src="wa/importance-of-a-good-basic.png" alt="High quality fashion basics" width="500">
     <p><em>Here are the links to a couple sites I mentioned...</em></p>
     <p><a href="https://www.skims.com" target="_blank">Skims</a> | <a href="https://www.levi.com" target="_blank">Levi's</a></p>
 
     <h2 id="thrifted">The Art of Styling and Re-Styling Thrifted Pieces</h2>
     <p>Thrifting is a sustainable, fun, and expressive way to curate a wardrobe. It also combats the negatives of fast fashion by keeping clothes in circulation and supporting small sellers. When shopping, keeping in mind how many ways an item can be styled should be a key factor in your decision to purchase or not.</p>
-    <img src="skirt-many-ways.png" alt="Thrifted styling options" width="500">
+    <img src="wa/skirt-many-ways.png" alt="Thrifted styling options" width="500">
     <p><em>One skirt styled multiple ways, paired with the same bag aswell</em></p>
 
     <h2 id="trend-highlights">Belts, Boots, and Micro Shorts: Trend Highlights</h2>
@@ -46,7 +46,7 @@
 
     <h2 id="one-piece">One Piece, Many Looks</h2>
     <p>Sustainability and the idea of a capsule wardrobe come into play here, when one item-- like a Miu Miu crochet bag-- can accompany countless outfits. This is a way to incorporate designer pieces alongside your thrifted clothing, while going back to the idea of choosing pieces you can style many different ways. </p>
-    <img src="bag-many-ways.png" alt="Miu Miu crochet bag styled multiple ways" width="500">
+    <img src="wa/bag-many-ways.png" alt="Miu Miu crochet bag styled multiple ways" width="500">
     <p><em>The iconic, colorful, crochet Miu Miu bag styled across many different outfits and aesthetics</em></p>
 
     <h2 id="capsule">Capsule Wardrobes & Taking Risks</h2>
