Update wa3.html links

--- a/wa/wa3.html
+++ b/wa/wa3.html
@@ -40,13 +40,13 @@
 
     <h2 id="trend-highlights">Belts, Boots, and Micro Shorts: Trend Highlights</h2>
     <p>Statement belts over micro shorts or skirt waists without loops? A Summer 2025 obsession. And boots? They make everything cooler, especially when paired with boots, or a lower ballet flat/sneaker with high socks.</p>
-    <img src="../trend1-belts-microshorts.png" alt="Belts on micro shorts and skirts" width="500">
-    <img src="../trend2-microshorts.png" alt="Micro shorts" width="500">
+    <img src="trend1-belts-microshorts.png" alt="Belts on micro shorts and skirts" width="500">
+    <img src="trend2-microshorts.png" alt="Micro shorts" width="500">
     <p><em>Micro shorts + belts = the perfect Summer 2025 moment</em></p>
 
     <h2 id="one-piece">One Piece, Many Looks</h2>
     <p>Sustainability and the idea of a capsule wardrobe come into play here, when one item-- like a Miu Miu crochet bag-- can accompany countless outfits. This is a way to incorporate designer pieces alongside your thrifted clothing, while going back to the idea of choosing pieces you can style many different ways. </p>
-    <img src="/bag-many-ways.png" alt="Miu Miu crochet bag styled multiple ways" width="500">
+    <img src="bag-many-ways.png" alt="Miu Miu crochet bag styled multiple ways" width="500">
     <p><em>The iconic, colorful, crochet Miu Miu bag styled across many different outfits and aesthetics</em></p>
 
     <h2 id="capsule">Capsule Wardrobes & Taking Risks</h2>
