--- a/wa3.html
+++ b/wa3.html
@@ -51,7 +51,7 @@
 
     <h2 id="capsule">Capsule Wardrobes & Taking Risks</h2>
     <p>Capsule wardrobes aren't boring-- they're freeing. Think fewer pieces, more styling power, and more of a chance you'll be able to even remember what's in your closet. It’s all about pairing your favorite colors with your style aesthetic to find your signature look, using pieces that can be used cohesively with one another to create many different looks.</p>
-    <p>Check out <a href="https://open.spotify.com/episode/3cT6uPPYvxUxNbXiXHKnKV" target="_blank">Emma Chamberlain's podcast episode: "how to build a realistic capsule wardrobe, explained"</a>.</p>
+    <p>Check out <a href="https://open.spotify.com/episode/3cT6uPPYvxUxNbXiXHKnKV" target="_blank">Emma Chamberlain's podcast episode: "how to build a realistic capsule wardrobe, explained"</a></p>
 
     <h2 id="shopping-smart">Shopping Smart: Depop, Poshmark, and The RealReal</h2>
     <p>Each of these platforms make fashion accessible, reusable, and offer a whole new way of thrifting-- especially when it comes to designer pieces. Depop and Poshmark are best for thrifting and selling, while The RealReal is an online heaven for vintage designer pieces.</p>
