--- a/wa/wa4.html
+++ b/wa/wa4.html
@@ -4,9 +4,11 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
     <title>Fundamental CSS comprehension</title>
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
 
+  <!-- Original Card -->
   <section class="card">
     <header>
       <h2>Chris Mills</h2>
@@ -23,6 +25,24 @@
     </article>
     <footer>
       <p>Editing, writing, and web development services</p>
+    </footer>
+  </section>
+
+  <!-- Custom Card -->
+  <section class="card custom">
+    <header>
+      <h2>Lana Del Rey</h2>
+    </header>
+    <article>
+      <img src="lana.jpg" alt="A picture of Lana Del Rey">
+      <p>Singer • Songwriter • Poet<br>
+         Known for cinematic style<br>
+         National Anthem enthusiast<br>
+         <strong>Instagram</strong>: @honeymoon<br>
+         <strong>Website</strong>: lanadelrey.com</p>
+    </article>
+    <footer>
+      <p>Melancholy glamour and vintage Americana</p>
     </footer>
   </section>
 
