--- a/wa/wa4.html
+++ b/wa/wa4.html
@@ -8,7 +8,7 @@
   </head>
   <body>
 
-  <!-- Original Card -->
+  <!-- Assigned Card -->
   <section class="card">
     <header>
       <h2>Chris Mills</h2>
@@ -28,7 +28,7 @@
     </footer>
   </section>
 
-  <!-- Custom Card -->
+  <!-- Celebrity Card -->
   <section class="card custom">
     <header>
       <h2>Lana Del Rey</h2>
