--- a/wa/wa4.html
+++ b/wa/wa4.html
@@ -35,9 +35,9 @@
     </header>
     <article>
       <img src="lana.jpg" alt="A picture of Lana Del Rey">
-      <p>Singer • Songwriter • Poet<br>
-         Known for cinematic style<br>
-         National Anthem enthusiast<br>
+      <p>Singer, Songwriter, Poet, Lyrical Genious<br>
+         Known for her singing, aesthetics, and cinematic style<br>
+         Vintage soul with a modern mind<br>
          <strong>Instagram</strong>: @honeymoon<br>
          <strong>Website</strong>: lanadelrey.com</p>
     </article>
