--- a/ica/ica5/ica5.html
+++ b/ica/ica5/ica5.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html lang="en-US">
   <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width">
-    <title>Fancy letterheaded paper</title>
-    
-  </head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width">
+  <title>Fancy letterheaded paper</title>
+  <link rel="stylesheet" href="ica5-style.css" />
+</head>
+
   <body>
 
     <article>
