--- a/wa/wa5.html
+++ b/wa/wa5.html
@@ -11,25 +11,27 @@
   <div class="image-container">
     <img src="sports-game-image.jpg" alt="Football game screenshot" />
     
-    <!-- Top overlay -->
+    <!-- top overlay -->
     <div class="overlay top">
       <p><strong>G. Kittle</strong> 2 REC, 16 YDS &nbsp; | &nbsp; <strong>J. Garoppolo</strong> 13/15, 128 YDS, 1 TD, 1 INT</p>
     </div>
 
-    <!-- Bottom overlay -->
+    <!-- bottom overlay -->
     <div class="overlay bottom">
       <div class="score-box">
-        <span class="team sf">SF: 10</span>
-        <span class="team kc">KC: 10</span>
+        <span class="team sf">SF</span>
+        <span class="score">10</span>
+        <span class="divider">|</span>
+        <span class="team kc">KC</span>
+        <span class="score">10</span>
       </div>
       <div class="info-box">
-        <span>3rd QTR</span>
+        <span>Q3</span>
         <span>11:25</span>
         <span>2nd &amp; 5</span>
       </div>
     </div>
-
-  </div>
+  </div> <!-- closing .image-container -->
 
 </body>
 </html>
