--- a/ica/ica7/ica7.html
+++ b/ica/ica7/ica7.html
@@ -1,20 +1,25 @@
-body{
-    background-color: khaki;
-}
-#box1{
-    width: 25vw;
-    height: 20vh;
-    background-color: indianred;
-}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="ica7.css" rel="stylesheet">
+    <title>Just a little Touchy</title>
+    <link rel="stylesheet" href="ica8.css">
+</head>
+<body>
+    <div id="box1">
+        <p>
+            Make me turn purple when hovered.
+        </p>
+    </div>
 
+    <div id="box2">
+        <p>
+            Make me move around.
+        </p>
+    </div>
 
-#box2{
-    width: 25vw;
-    height:20vh;
-    position: relative;
-    background-color: orangered;
-}
-
-@keyframes box2move{
-
-}
+</body>
+</html>
