--- a/wa7/wa7.html
+++ b/wa7/wa7.html
@@ -18,6 +18,6 @@
         <a>More</a>
         <a>Socials</a>
     </nav>
-    <img src="img/matisseChess.png">
+    <img src="wa7/aestheticImage.jpeg" alt="Record Store Illustration">
 </body>
 </html>
