--- a/wa7/wa7.html
+++ b/wa7/wa7.html
@@ -5,7 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
-    <title>Dance Like Nav</title>
+    <title>Vintage Vinyl</title>
+<h1>Emotion Shown through Art</h1>
 </head>
 <body>
     <h1>Put Your Title Here</h1> <!--change this text-->
