--- a/wa7/wa7.html
+++ b/wa7/wa7.html
@@ -6,10 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
     <title>Vintage Vinyl</title>
-<h1>Emotion Shown through Art</h1>
 </head>
 <body>
-    <h1>Put Your Title Here</h1> <!--change this text-->
+    <h1>Where Music Meets Art, In Color</h1> 
     <div id="red-ball">
     </div>
     <nav>
