--- a/wa7/wa7.html
+++ b/wa7/wa7.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="wa7.css"> <!-- ✅ This is what was missing -->
+  <link rel="stylesheet" href="wa7.css">
   <title>Vintage Vinyl</title>
 </head>
 <body>
