--- a/wa7/wa7.html
+++ b/wa7/wa7.html
@@ -9,7 +9,7 @@
   <title>Vintage Vinyl</title>
 </head>
 <body>
-    <h1>Where Music Meets Art, In Color</h1> 
+    <h1>Records on Records</h1> 
     <div id="red-ball">
     </div>
     <nav>
