--- a/wa7/wa7.html
+++ b/wa7/wa7.html
@@ -19,6 +19,6 @@
         <a>More</a>
         <a>Socials</a>
     </nav>
-    <img src="wa7/aestheticImage.jpeg" alt="Record Store Illustration">
+    <img src="aestheticImage.jpeg" alt="Record Store Illustration">
 </body>
 </html>
