--- a/wa7/wa7.html
+++ b/wa7/wa7.html
@@ -13,11 +13,11 @@
     <div id="red-ball">
     </div>
     <nav>
-        <a>Home</a>
-        <a>About</a>
-        <a>Projects</a>
-        <a>More</a>
-        <a>Socials</a>
+  <a href="#">Home</a>
+  <a href="#">About</a>
+  <a href="#">Projects</a>
+  <a href="#">More</a>
+  <a href="#">Socials</a>
     </nav>
     <img src="aestheticImage.jpeg" alt="Record Store Illustration">
 </body>
