--- a/wa/wa11.html
+++ b/wa/wa11.html
@@ -11,7 +11,7 @@
     <img id="fullImage" src="img/photobooth.jpg" alt="Gallery Image">
   </div>
   <div class="thumb-bar">
-    <!-- Thumbnails will be added with JS -->
+    <!-- thumbnails added w/ JS -->
   </div>
 
   <script src="wa11.js"></script>
