--- a/wa/wa11.html
+++ b/wa/wa11.html
@@ -8,7 +8,7 @@
 <body>
   <h1>NYC Aesthetic Gallery</h1>
   <div class="full-img" id="fullImgContainer">
-    <img id="fullImage" src="img/photobooth.jpg" alt="Gallery Image">
+    <img id="fullImage" class="displayed-img" src="img/photobooth.jpg" alt="Gallery Image">
   </div>
   <div class="thumb-bar">
     <!-- thumbnails added w/ JS -->
